--- a/src/style.css
+++ b/src/style.css
@@ -13,9 +13,9 @@ input {
 }
 
 body {
-   @apply grid place-items-center h-screen bg-gray-950
+   @apply grid place-items-center h-screen bg-neutral-100 dark:bg-gray-950
 }
 
 .btn {
-   @apply focus:outline-2 focus:outline-white opacity-80 bg-white/5 text-white m-3 px-6 py-4 rounded-[50%] hover:bg-primary-500 hover:text-gray-950 hover:opacity-100
+   @apply focus:outline-2 focus:outline-white opacity-80 bg-black/5 dark:bg-white/5 dark:text-white m-3 px-6 py-4 rounded-[50%] hover:bg-primary-500 dark:hover:bg-primary-500 hover:text-white dark:hover:text-gray-950 hover:opacity-100
 }
